# simple_gate_simulator

./: CMakeLists.txt  Makefile  flake.nix  main  main.cpp  netlist.csv
include/: gate_logic.h
src/: gate_logic.cpp  main.cpp  netlist.csv  test.cpp
tests/: test.cpp
tests/netlists/: mux.csv
